檢查：剩下故事和單一故事

--- a/customzied.html
+++ b/customzied.html
@@ -12,39 +12,33 @@
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <nav
-        class="navbar navbar-expand-lg d-flex justify-content-between align-items-center bg-nbaBlue link-white navbar-light px-3"
-      >
-        <!-- 包品牌 -->
-        <div class="d-flex justify-content-between align-items-center">
+      <nav class="navbar navbar-expand-md navbar-light bg-light bg-nbaBlue">
+        <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
-            <div>
-              <a class="navbar-brand" href="#"> JerseyTown </a>
-            </div>
-            <a class="align-self-center text-decoration-none" href="">
+            <a class="navbar-brand" href="#">JerseyTown</a>
+            <a class="align-self-center text-decoration-none" href="home.html">
               <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
-          <div class="ms-3">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <!--  -->
-        </div>
-        <!--包選單 -->
-        <div>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
+          <div
+            class="collapse navbar-collapse mb-3 mb-md-0"
+            id="navbarSupportedContent"
+          >
+            <!-- margin-start 自動推到底 好用排版方式 -->
+            <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
                 <a
                   class="nav-link p-3 active"
@@ -54,7 +48,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="register.html">Service</a>
+                <a class="nav-link p-3" href="#Service">Service</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link p-3" href="newproduct.html">Product</a>
@@ -67,9 +61,9 @@
                   class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed disable"
                 >
                   <a
-                    class="text-decoration-none text-white"
+                    class="text-decoration-none text-white fs-6"
                     type="submit"
-                    href="home.html"
+                    href="customzied.html"
                   >
                     Customized
                   </a>
@@ -94,6 +88,7 @@
               type="text"
               class="form-control"
               id="validationServer01"
+              name="Last"
               required
             />
             <div class="valid-feedback">Looks good!</div>
@@ -106,6 +101,7 @@
               type="text"
               class="form-control"
               id="validationServer02"
+              name="First"
               required
             />
             <div class="valid-feedback">Looks good!</div>
@@ -113,9 +109,10 @@
           <div class="col-md-12">
             <label for="validationServer03" class="form-label">Cellphone</label>
             <input
-              type="text"
+              type="tel"
               class="form-control"
               id="validationServer03"
+              name="Cellphone"
               required
             />
           </div>
@@ -124,7 +121,7 @@
             <label for="validationCustom04" class="form-label">Address</label>
             <select class="form-select" id="validationCustom04" required>
               <option selected disabled value="">Choose City</option>
-              <option>...</option>
+              <option value="123">...</option>
             </select>
           </div>
           <div class="col-md-6">
@@ -136,7 +133,7 @@
             >
             <select class="form-select" id="validationCustom05" required>
               <option selected disabled value="">Choose State</option>
-              <option>...</option>
+              <option value="123">...</option>
             </select>
           </div>
           <div class="col-12">
@@ -145,6 +142,7 @@
               class="form-control"
               id="inputAddress2"
               placeholder="Input detail address"
+              name="detailaddress"
               required
             />
           </div>
@@ -155,14 +153,14 @@
             >
             <select class="form-select" id="validationCustom06" required>
               <option selected disabled value="">Choose Designer</option>
-              <option>...</option>
+              <option value="123">...</option>
             </select>
           </div>
           <div class="col-md-12">
-            <label for="inputCity" class="form-label fs-0">Pay</label>
-            <select class="form-select" id="validationCustom06" required>
+            <label for="validationCustom07" class="form-label fs-0">Pay</label>
+            <select class="form-select" id="validationCustom07" required>
               <option selected disabled value="">Choose Pay</option>
-              <option>...</option>
+              <option value="123">...</option>
             </select>
           </div>
 
@@ -173,6 +171,7 @@
                 class="form-check-input"
                 type="checkbox"
                 id="autoSizingCheck2"
+                name="Package"
               />
               <label class="form-check-label" for="autoSizingCheck2">
                 Package + $10
@@ -191,6 +190,7 @@
                 class="form-check-input"
                 type="checkbox"
                 id="autoSizingCheck2"
+                name="Frameless"
               />
               <label class="form-check-label" for="autoSizingCheck2">
                 Frameless + $1000
@@ -199,14 +199,16 @@
           </div>
 
           <div class="col-12">
-            <label for="validationServer03" class="form-label">Email</label>
+            <label for="validationServer07" class="form-label">Email</label>
             <input
-              type="text"
+              type="email"
               class="form-control"
-              id="validationServer03"
+              id="validationServer07"
+              name="Email"
               required
             />
             <div class="invalid-feedback">Please provide a email.</div>
+            <div class="valid-feedback">Look really beautiful email.</div>
           </div>
           <div class="col-12">
             <label for="validationServer04" class="form-label">Remark</label>
@@ -214,6 +216,7 @@
               class="form-control"
               id="validationServer04"
               rows="3"
+              name="Remark"
             ></textarea>
           </div>
           <p class="text-center fs-4 my-3">Total USD$6666</p>
@@ -231,29 +234,40 @@
       <!-- 徵才 -->
       <div class="container-lg border-nbaRed border-top border-3">
         <div
-          class="row row-cols-1 row-cols-lg-2 d-flex justify-content-center align-items-center mb-5 mx-5 mt-5"
+          class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
-          <div class="col d-flex justify-content-center mb-5 mb-lg-0 mx-lg-0">
-            <img class="" height="130" src="nbaWeb/1506074059.svg" alt="" />
+          <div class="col d-flex justify-content-center mb-3 mb-lg-0">
+            <!-- ms-auto 可推動本身寬度 -->
+            <!-- 不用設定小於md 要設定0 就不會在RWD跑版 ~~~~-->
+            <img
+              class="ms-lg-auto"
+              height="130"
+              src="nbaWeb/1506074059.svg"
+              alt=""
+            />
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>jersey fundraising</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
           </div>
-          <div class="col d-flex justify-content-center">
+          <div class="col d-flex justify-content-center px-0">
             <img
               class=""
               height="130"
               src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
               alt=""
             />
-            <div class="">
+            <div class="me-lg-auto">
               <h3>JOIN TEAM</h3>
               <p>customized jersey</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
