--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
                   <a
                     class="text-decoration-none text-white fs-6"
                     type="submit"
-                    href="home.html"
+                    href="customzied.html"
                   >
                     Customized
                   </a>
@@ -195,11 +195,14 @@
       <div class="text-center mt-4">
         <a
           type="button"
-          href=""
+          href="newproduct.html"
           class="btn btn-outline-nbaBlue rounded-pill fs-5 me-md-3 me-0 mb-3 mb-md-0"
           >SEE MORE PRODUCT</a
         >
-        <a type="button" href="" class="btn btn-nbaRed rounded-pill fs-5"
+        <a
+          type="button"
+          href="customzied.html"
+          class="btn btn-nbaRed rounded-pill fs-5"
           >CUSTOMIZED JERSEY</a
         >
       </div>
@@ -247,7 +250,7 @@
             </div>
             <div class="sell_more">
               <a
-                href="#"
+                href="allstarListItem.html"
                 class="d-block text-center text-decoration-none link-pick_black pb-2"
                 >MORE</a
               >
@@ -276,14 +279,14 @@
             </div>
             <div class="sell_more">
               <a
-                href="#"
+                href="allstarListItem.html"
                 class="d-block text-center text-decoration-none link-pick_black pb-2 stretched-link"
                 >MORE</a
               >
             </div>
           </div>
         </div>
-        <div class="col mb-5 mb-lg-0">
+        <div class="col mb-3 mb-lg-0">
           <div class="card position-relative shadow" style="height: 424px">
             <img
               data-num="003"
@@ -307,7 +310,7 @@
             </div>
             <div class="sell_more">
               <a
-                href="#"
+                href="allstarListItem.html"
                 class="d-block text-center text-decoration-none link-pick_black pb-2 fs-6"
                 >MORE</a
               >
@@ -319,7 +322,7 @@
       <div class="sell_more text-center">
         <a
           type="button"
-          href="allstar.html"
+          href="allstarList.html"
           class="btn btn-outline-nbaBlue rounded-pill my-5 fs-5"
           >SEE MORE LISTS</a
         >
@@ -329,7 +332,7 @@
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
-          <div class="col d-flex justify-content-center mb-3 mb-md-0">
+          <div class="col d-flex justify-content-center mb-3 mb-lg-0">
             <!-- ms-auto 可推動本身寬度 -->
             <!-- 不用設定小於md 要設定0 就不會在RWD跑版 ~~~~-->
             <img
@@ -341,7 +344,9 @@
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>jersey fundraising</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
@@ -356,7 +361,9 @@
             <div class="me-lg-auto">
               <h3>JOIN TEAM</h3>
               <p>customized jersey</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
