--- a/allstar.html
+++ b/allstar.html
@@ -12,46 +12,43 @@
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <nav
-        class="navbar navbar-expand-lg d-flex justify-content-between align-items-center bg-nbaBlue link-white navbar-light px-3"
-      >
-        <!-- 包品牌 -->
-        <div class="d-flex justify-content-between align-items-center">
+      <nav class="navbar navbar-expand-md navbar-light bg-light bg-nbaBlue">
+        <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
-            <div>
-              <a class="navbar-brand" href="#"> JerseyTown </a>
-            </div>
-            <a class="align-self-center text-decoration-none" href="">
+            <a class="navbar-brand" href="#">JerseyTown</a>
+            <a class="align-self-center text-decoration-none" href="home.html">
               <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
-          <div class="ms-3">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <!--  -->
-        </div>
-        <!--包選單 -->
-        <div>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
+          <div
+            class="collapse navbar-collapse mb-3 mb-md-0"
+            id="navbarSupportedContent"
+          >
+            <!-- margin-start 自動推到底 好用排版方式 -->
+            <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
-                <a class="nav-link p-3 active" aria-current="page" href="#"
+                <a
+                  class="nav-link p-3 active"
+                  aria-current="page"
+                  href="home.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="customzied.html">Service</a>
+                <a class="nav-link p-3" href="#Service">Service</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link p-3" href="newproduct.html">Product</a>
@@ -61,9 +58,13 @@
               </li>
               <li class="hvr-grow-shadow ms-1">
                 <button
-                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed"
+                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed disable"
                 >
-                  <a class="text-decoration-none text-white" type="submit">
+                  <a
+                    class="text-decoration-none text-white fs-6"
+                    type="submit"
+                    href="home.html"
+                  >
                     Customized
                   </a>
                 </button>
@@ -78,9 +79,11 @@
       <div
         class="row row-cols-1 row-cols-xl-5 mx-5 my-5 g-3 justify-content-around"
       >
-        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+        <div
+          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+        >
           <div
-            class="allstar_bg d-flex justify-content-center align-items-center"
+            class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
           >
             <img
               class="of-contain"
@@ -90,13 +93,20 @@
               alt=""
             />
           </div>
-          <p class="text-pickYellow">NO.1</p>
-          <h3 class="text-center">KOBE BRYANT</h3>
-          <p>BLACK MAMBA</p>
+          <div class="text-center allstartext_rwd">
+            <p class="text-nbaRed mt-3">NO.1</p>
+            <h3 class="">
+              KOBE <span class="br"><br /></span>
+              BRYANT
+            </h3>
+            <p>BLACK MAMBA</p>
+          </div>
         </div>
-        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+        <div
+          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+        >
           <div
-            class="allstar_bg d-flex justify-content-center align-items-center"
+            class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
           >
             <img
               class="of-contain"
@@ -106,13 +116,17 @@
               alt=""
             />
           </div>
-          <p class="text-pickYellow">NO.2</p>
-          <h3 class="text-center">LEBRON JAMES</h3>
-          <p>KING JAMES</p>
+          <div class="text-center allstartext_rwd">
+            <p class="text-nbaRed mt-3">NO.2</p>
+            <h3>LEBRON JAMES</h3>
+            <p>KING JAMES</p>
+          </div>
         </div>
-        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+        <div
+          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+        >
           <div
-            class="allstar_bg d-flex justify-content-center align-items-center"
+            class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
           >
             <img
               class="of-cover op-top"
@@ -122,13 +136,17 @@
               alt=""
             />
           </div>
-          <p class="text-pickYellow">NO.3</p>
-          <h3 class="text-center">STEPHEN CURRY</h3>
-          <p>LOGOSHOOT GOD</p>
+          <div class="text-center allstartext_rwd">
+            <p class="text-nbaRed mt-3">NO.3</p>
+            <h3>STEPHEN CURRY</h3>
+            <p>LOGOSHOOT GOD</p>
+          </div>
         </div>
-        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+        <div
+          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+        >
           <div
-            class="allstar_bg d-flex justify-content-center align-items-center"
+            class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
           >
             <img
               class="of-cover op-top"
@@ -138,16 +156,20 @@
               alt=""
             />
           </div>
-          <p class="text-pickYellow">NO.4</p>
-          <h3 class="text-center" class="text-center">
-            RUSSELL <br />
-            WESTBROOK
-          </h3>
-          <p>TRIPLE-DOUBLES GOD</p>
+          <div class="text-center allstartext_rwd">
+            <p class="text-nbaRed mt-3">NO.4</p>
+            <h3 class="text-center">
+              RUSSELL <br />
+              WESTBROOK
+            </h3>
+            <p>TRIPLE-DOUBLES GOD</p>
+          </div>
         </div>
-        <div class="col-12 col-xl-2 d-flex flex-column align-items-center">
+        <div
+          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+        >
           <div
-            class="allstar_bg d-flex justify-content-center align-items-center"
+            class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
           >
             <img
               class="of-cover op-top"
@@ -157,38 +179,53 @@
               alt=""
             />
           </div>
-          <p class="text-pickYellow">NO.5</p>
-          <h3 class="text-center">KRIE IRVING</h3>
-          <p>DRIBBLE GOD</p>
+          <div class="text-center allstartext_rwd">
+            <p class="text-nbaRed mt-3">NO.5</p>
+            <h3>
+              KRIE <span class="br"><br /></span> IRVING
+            </h3>
+            <p>DRIBBLE GOD</p>
+          </div>
         </div>
       </div>
 
       <!-- 徵才 -->
       <div class="container-lg border-nbaRed border-top border-3">
         <div
-          class="row row-cols-1 row-cols-lg-2 d-flex justify-content-center align-items-center mb-5 mx-5 mt-5"
+          class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
-          <div class="col d-flex justify-content-center mb-5 mb-lg-0 mx-lg-0">
-            <img class="" height="130" src="nbaWeb/1506074059.svg" alt="" />
+          <div class="col d-flex justify-content-center mb-3 mb-lg-0">
+            <!-- ms-auto 可推動本身寬度 -->
+            <!-- 不用設定小於md 要設定0 就不會在RWD跑版 ~~~~-->
+            <img
+              class="ms-lg-auto"
+              height="130"
+              src="nbaWeb/1506074059.svg"
+              alt=""
+            />
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>jersey fundraising</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
           </div>
-          <div class="col d-flex justify-content-center">
+          <div class="col d-flex justify-content-center px-0">
             <img
               class=""
               height="130"
               src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
               alt=""
             />
-            <div class="">
+            <div class="me-lg-auto">
               <h3>JOIN TEAM</h3>
               <p>customized jersey</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
