--- a/newproduct.html
+++ b/newproduct.html
@@ -12,39 +12,33 @@
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <nav
-        class="navbar navbar-expand-lg d-flex justify-content-between align-items-center bg-nbaBlue link-white navbar-light px-3"
-      >
-        <!-- 包品牌 -->
-        <div class="d-flex justify-content-between align-items-center">
+      <nav class="navbar navbar-expand-md navbar-light bg-light bg-nbaBlue">
+        <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
-            <div>
-              <a class="navbar-brand" href="#"> JerseyTown </a>
-            </div>
-            <a class="align-self-center text-decoration-none" href="">
+            <a class="navbar-brand" href="#">JerseyTown</a>
+            <a class="align-self-center text-decoration-none" href="home.html">
               <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
-          <div class="ms-3">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <!--  -->
-        </div>
-        <!--包選單 -->
-        <div>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
+          <div
+            class="collapse navbar-collapse mb-3 mb-md-0"
+            id="navbarSupportedContent"
+          >
+            <!-- margin-start 自動推到底 好用排版方式 -->
+            <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
                 <a
                   class="nav-link p-3 active"
@@ -54,7 +48,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="register.html">Service</a>
+                <a class="nav-link p-3" href="#Service">Service</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link p-3" href="newproduct.html">Product</a>
@@ -64,12 +58,12 @@
               </li>
               <li class="hvr-grow-shadow ms-1">
                 <button
-                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed"
+                  class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed disable"
                 >
                   <a
-                    class="text-decoration-none text-white"
+                    class="text-decoration-none text-white fs-6"
                     type="submit"
-                    href="customzied.html"
+                    href="home.html"
                   >
                     Customized
                   </a>
@@ -98,7 +92,7 @@
           <!-- 側欄 -->
           <!-- 上面row響應 下面col也要響應~~~ -->
           <div class="col col-lg-3 lh-lg aside">
-            <h3 class="text-center text-md-start">Player</h3>
+            <h3 class="text-center text-lg-start">Player</h3>
             <!-- BS內建margin 很多推不到位 可能要設定0 用開發者看會有淡黃區域 -->
             <ul
               class="list-unstyled d-flex flex-lg-column justify-content-around mx-5 my-3 ms-0"
@@ -205,29 +199,40 @@
       <!-- 徵才 -->
       <div class="container-lg border-nbaRed border-top border-3">
         <div
-          class="row row-cols-1 row-cols-lg-2 d-flex justify-content-center align-items-center mb-5 mx-5 mt-5"
+          class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
-          <div class="col d-flex justify-content-center mb-5 mb-lg-0 mx-lg-0">
-            <img class="" height="130" src="nbaWeb/1506074059.svg" alt="" />
+          <div class="col d-flex justify-content-center mb-3 mb-lg-0">
+            <!-- ms-auto 可推動本身寬度 -->
+            <!-- 不用設定小於md 要設定0 就不會在RWD跑版 ~~~~-->
+            <img
+              class="ms-lg-auto"
+              height="130"
+              src="nbaWeb/1506074059.svg"
+              alt=""
+            />
             <div class="">
               <h3>JOIN TEAM</h3>
               <p>jersey fundraising</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
           </div>
-          <div class="col d-flex justify-content-center">
+          <div class="col d-flex justify-content-center px-0">
             <img
               class=""
               height="130"
               src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
               alt=""
             />
-            <div class="">
+            <div class="me-lg-auto">
               <h3>JOIN TEAM</h3>
               <p>customized jersey</p>
-              <a href="" class="btn btn-outline-nbaBlue rounded-pill fs-5"
+              <a
+                href="customzied.html"
+                class="btn btn-outline-nbaBlue rounded-pill fs-5"
                 >SEND MESSAGE</a
               >
             </div>
