新增：輪播圖和影片

--- a/home.html
+++ b/home.html
@@ -73,8 +73,65 @@
           </div>
         </div>
       </nav>
+      <!-- video banner -->
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <!-- 加寬度100%不錯位跑版 -->
+            <video width="1440" height="810" class="w-100" controls>
+              <source
+                src="./nbaWeb/Miami Heat vs. Memphis Grizzlies Full Game Highlights _ Oct 7 _ 2022 NBA Preseason.mp4"
+                type="video/mp4"
+              />
+            </video>
+          </div>
+          <div class="carousel-item">
+            <!-- 加寬度100%不錯位跑版 -->
+            <img
+              src="./nbaWeb/john-villablanca-_7EXgSQ98ew-unsplash.jpg"
+              class="of-cover op-top w-100"
+              alt="..."
+              height="810"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./nbaWeb/dean-bennett-nFjLHE4vmn4-unsplash.jpg"
+              class="d-block w-100"
+              alt="..."
+              height="810"
+            />
+          </div>
+        </div>
+      </div>
       <!-- banner -->
-      <div class="banner bgs-cover"></div>
+      <!-- <div class="banner bgs-cover"></div> -->
       <!-- 募款 -->
       <!-- row 都加 flex-row 比較清楚~~~ -->
       <div
