--- a/allstarList.html
+++ b/allstarList.html
@@ -12,39 +12,33 @@
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <nav
-        class="navbar navbar-expand-lg d-flex justify-content-between align-items-center bg-nbaBlue link-white navbar-light px-3"
-      >
-        <!-- 包品牌 -->
-        <div class="d-flex justify-content-between align-items-center">
+      <nav class="navbar navbar-expand-md navbar-light bg-light bg-nbaBlue">
+        <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
-            <div>
-              <a class="navbar-brand" href="#"> JerseyTown </a>
-            </div>
-            <a class="align-self-center text-decoration-none" href="">
+            <a class="navbar-brand" href="#">JerseyTown</a>
+            <a class="align-self-center text-decoration-none" href="home.html">
               <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
-          <div class="ms-3">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <!--  -->
-        </div>
-        <!--包選單 -->
-        <div>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
+          <div
+            class="collapse navbar-collapse mb-3 mb-md-0"
+            id="navbarSupportedContent"
+          >
+            <!-- margin-start 自動推到底 好用排版方式 -->
+            <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
                 <a
                   class="nav-link p-3 active"
@@ -67,9 +61,9 @@
                   class="learn-more btn btn-nbaRed rounded-pill text-white p-2 mt-lg-2 bg-nbaRed disable"
                 >
                   <a
-                    class="text-decoration-none text-white"
+                    class="text-decoration-none text-white fs-6"
                     type="submit"
-                    href="home.html"
+                    href="customzied.html"
                   >
                     Customized
                   </a>
@@ -79,7 +73,6 @@
           </div>
         </div>
       </nav>
-
       <!-- 銷售排行 -->
       <div
         id="Ranking"
@@ -123,7 +116,7 @@
             </div>
             <div class="sell_more">
               <a
-                href="#"
+                href="allstarListItem.html"
                 class="d-block text-center text-decoration-none link-pick_black pb-2"
                 >MORE</a
               >
@@ -184,7 +177,7 @@
             <div class="sell_more">
               <a
                 href="#"
-                class="d-block text-center text-decoration-none link-pick_black pb-2 fs-6"
+                class="d-block text-center text-decoration-none link-pick_black pb-2 "
                 >MORE</a
               >
             </div>
@@ -215,7 +208,7 @@
             <div class="sell_more">
               <a
                 href="#"
-                class="d-block text-center text-decoration-none link-pick_black pb-2 fs-6"
+                class="d-block text-center text-decoration-none link-pick_black pb-2 "
                 >MORE</a
               >
             </div>
@@ -246,7 +239,7 @@
             <div class="sell_more">
               <a
                 href="#"
-                class="d-block text-center text-decoration-none link-pick_black pb-2 fs-6"
+                class="d-block text-center text-decoration-none link-pick_black pb-2 ""
                 >MORE</a
               >
             </div>
@@ -277,7 +270,7 @@
             <div class="sell_more">
               <a
                 href="#"
-                class="d-block text-center text-decoration-none link-pick_black pb-2 fs-6"
+                class="d-block text-center text-decoration-none link-pick_black pb-2"
                 >MORE</a
               >
             </div>
