--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JerseyTown</title>
 
-    <link rel="stylesheet" href="./stylesheet/main.css" />
+    <link rel="stylesheet" href="./stylesheets/main.css" />
   </head>
 
   <body>
@@ -123,7 +123,7 @@
           <div class="carousel-item">
             <img
               src="./nbaWeb/dean-bennett-nFjLHE4vmn4-unsplash.jpg"
-              class="d-block w-100"
+              class="d-block w-100 op-center of-cover"
               alt="..."
               height="810"
             />
