修正：btn_Rwd 並填加入mixin

--- a/home.html
+++ b/home.html
@@ -104,7 +104,14 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <!-- 加寬度100%不錯位跑版 -->
-            <video width="1440" height="810" class="w-100" controls>
+            <video
+              width="1440"
+              height="810"
+              class="w-100"
+              controls
+              autoplay
+              muted
+            >
               <source
                 src="./nbaWeb/Miami Heat vs. Memphis Grizzlies Full Game Highlights _ Oct 7 _ 2022 NBA Preseason.mp4"
                 type="video/mp4"
@@ -249,7 +256,9 @@
         </div>
       </div>
 
-      <div class="text-center mt-4">
+      <div
+        class="text-center mt-4 d-flex flex-column flex-md-row justify-content-center"
+      >
         <a
           type="button"
           href="newproduct.html"
@@ -380,7 +389,7 @@
         <a
           type="button"
           href="allstarList.html"
-          class="btn btn-outline-nbaBlue rounded-pill my-5 fs-5"
+          class="btn btn-outline-nbaBlue rounded-pill my-5 fs-5 sellbtn_Rwd"
           >SEE MORE LISTS</a
         >
       </div>
