--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
             <a class="navbar-brand" href="#">JerseyTown</a>
-            <a class="align-self-center text-decoration-none" href="home.html">
+            <a class="align-self-center text-decoration-none" href="index.html">
               <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
@@ -43,7 +43,7 @@
                 <a
                   class="nav-link p-3 active"
                   aria-current="page"
-                  href="home.html"
+                  href="index.html"
                   >Home</a
                 >
               </li>
@@ -292,7 +292,7 @@
       </p>
       <div class="row row-cols-1 row-cols-lg-3 g-4 rank_card mx-2 mt-5">
         <div class="col mb-5 mb-lg-0">
-          <div class="card position-relative shadow" style="height: 424px">
+          <div class="card position-relative" style="height: 424px">
             <img
               data-num="001"
               src="nbaWeb/PNG-images-NBA-Players-41png.png"
@@ -317,7 +317,7 @@
             <div class="sell_more">
               <a
                 href="allstarListItem.html"
-                class="d-block text-center text-decoration-none link-pick_black pb-2"
+                class="d-block text-center text-decoration-none link-pick_black pb-2 stretched-link"
                 >MORE</a
               >
             </div>
@@ -437,22 +437,20 @@
         </div>
       </div>
       <!-- 小圖示 -->
-      <div class="position-relation">
-        <a href="#">
-          <img
-            onmouseover="hover_custom(this);"
-            onmouseout="unhover_custom(this);"
-            src="./nbaWeb/silhouette-basket-05.svg"
-            alt=""
-            height="150"
-            width="150"
-            class="custom_img_after position-fixed bottom-0 end-0"
-            data-bs-toggle="tooltip"
-            data-bs-placement="top"
-            title="Let's customized jersey !"
-          />
-        </a>
-      </div>
+      <a href="#">
+        <img
+          onmouseover="hover_custom(this);"
+          onmouseout="unhover_custom(this);"
+          src="./nbaWeb/silhouette-basket-05.svg"
+          alt=""
+          height="150"
+          width="150"
+          class="custom_img_after position-fixed bottom-0 end-0 me-5"
+          data-bs-toggle="tooltip"
+          data-bs-placement="top"
+          title="Let's customized jersey !"
+        />
+      </a>
 
       <div class="footer bg-nbaRed text-center text-white py-2 pt-4">
         <p>Copyright © 2022 JerseyTown.All rights reserved.</p>
