--- a/newproduct.html
+++ b/newproduct.html
@@ -16,7 +16,7 @@
         <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
             <a class="navbar-brand" href="#">JerseyTown</a>
-            <a class="align-self-center text-decoration-none" href="home.html">
+            <a class="align-self-center text-decoration-none" href="index.html">
               <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
           </div>
@@ -43,7 +43,7 @@
                 <a
                   class="nav-link p-3 active"
                   aria-current="page"
-                  href="home.html"
+                  href="index.html"
                   >Home</a
                 >
               </li>
@@ -63,7 +63,7 @@
                   <a
                     class="text-decoration-none text-white fs-6"
                     type="submit"
-                    href="home.html"
+                    href="index.html"
                   >
                     Customized
                   </a>
