--- a/allstar.html
+++ b/allstar.html
@@ -40,10 +40,7 @@
             <!-- margin-start 自動推到底 好用排版方式 -->
             <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
-                <a
-                  class="nav-link p-3 active"
-                  aria-current="page"
-                  href="index.html"
+                <a class="nav-link p-3" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
@@ -63,7 +60,7 @@
                   <a
                     class="text-decoration-none text-white fs-6"
                     type="submit"
-                    href="index.html"
+                    href="customzied.html"
                   >
                     Customized
                   </a>
