--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <nav class="navbar navbar-expand-md navbar-light bg-light bg-nbaBlue">
+      <nav class="navbar navbar-expand-md bg-nbaBlue">
         <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
             <a class="navbar-brand" href="#">JerseyTown</a>
@@ -40,10 +40,7 @@
             <!-- margin-start 自動推到底 好用排版方式 -->
             <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
-                <a
-                  class="nav-link p-3 active"
-                  aria-current="page"
-                  href="index.html"
+                <a class="nav-link p-3" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
@@ -104,14 +101,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <!-- 加寬度100%不錯位跑版 -->
-            <video
-              width="1440"
-              height="810"
-              class="w-100"
-              controls
-              autoplay
-              muted
-            >
+            <video width="1440" height="810" class="w-100" controls muted>
               <source
                 src="./nbaWeb/Miami Heat vs. Memphis Grizzlies Full Game Highlights _ Oct 7 _ 2022 NBA Preseason.mp4"
                 type="video/mp4"
@@ -158,8 +148,8 @@
         </div>
         <div class="col" style="max-width: 380px">
           <div class="money w-100">
-            <p class="fs-4 text-pickYellow">Service</p>
-            <h2 class="text-nbaBlue">EVERYBODY FUNDRAISING</h2>
+            <p class="fs-4 text-nbaBlue">Service</p>
+            <h2 class="">EVERYBODY FUNDRAISING</h2>
             <p class="fs-6">
               The Association of Jersey Charities exists to provide guidance to
               and be a source of funding for its members. <br />
@@ -178,7 +168,7 @@
       <!-- 最新球衣 -->
       <div
         id="Product"
-        class="my-5 d-flex justify-content-center align-items-center text-nbaRed"
+        class="my-5 d-flex justify-content-center align-items-center"
       >
         <h2>NEW</h2>
         <img
@@ -268,7 +258,7 @@
         <a
           type="button"
           href="customzied.html"
-          class="btn btn-nbaRed rounded-pill fs-5"
+          class="btn btn-nbaBlue rounded-pill fs-5"
           >CUSTOMIZED JERSEY</a
         >
       </div>
@@ -276,7 +266,7 @@
       <!-- 銷售排行 -->
       <div
         id="Ranking"
-        class="d-flex justify-content-center align-items-center text-nbaRed mt-5"
+        class="d-flex justify-content-center align-items-center mt-5"
       >
         <h2>TOP</h2>
         <img
@@ -394,7 +384,7 @@
         >
       </div>
       <!-- 徵才 -->
-      <div class="container-lg border-nbaRed border-top border-3">
+      <div class="container-lg border-nbaBlue border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
@@ -437,7 +427,7 @@
         </div>
       </div>
       <!-- 小圖示 -->
-      <a href="#">
+      <a href="customzied.html">
         <img
           onmouseover="hover_custom(this);"
           onmouseout="unhover_custom(this);"
@@ -452,7 +442,7 @@
         />
       </a>
 
-      <div class="footer bg-nbaRed text-center text-white py-2 pt-4">
+      <div class="footer bg-nbaBlue text-center text-white py-2 pt-4">
         <p>Copyright © 2022 JerseyTown.All rights reserved.</p>
       </div>
     </div>
