--- a/newproduct.html
+++ b/newproduct.html
@@ -40,10 +40,7 @@
             <!-- margin-start 自動推到底 好用排版方式 -->
             <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
-                <a
-                  class="nav-link p-3 active"
-                  aria-current="page"
-                  href="index.html"
+                <a class="nav-link p-3" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
@@ -63,7 +60,7 @@
                   <a
                     class="text-decoration-none text-white fs-6"
                     type="submit"
-                    href="index.html"
+                    href="customzied.html"
                   >
                     Customized
                   </a>
@@ -76,7 +73,7 @@
       <!-- 最新球衣 -->
       <div
         id="Product"
-        class="my-5 d-flex justify-content-center align-items-center text-nbaRed"
+        class="my-5 d-flex justify-content-center align-items-center"
       >
         <h2>NEW</h2>
         <img
@@ -97,29 +94,29 @@
             <ul
               class="list-unstyled d-flex flex-lg-column justify-content-around mx-5 my-3 ms-0"
             >
-              <li class="">
-                <a class="text-decoration-none d-block active" href="#"
-                  ><span class=""> － </span> All</a
+              <li>
+                <a class="text-decoration-none d-block" href="#"
+                  ><span class="aside_span"> － </span> All</a
                 >
               </li>
               <li>
                 <a class="text-decoration-none d-block" href="#"
-                  ><span> － </span> Kobe</a
+                  ><span class="aside_span"> － </span> Kobe</a
                 >
               </li>
               <li>
                 <a class="text-decoration-none d-block" href="#"
-                  ><span> － </span> Rose</a
+                  ><span class="aside_span"> － </span> Rose</a
                 >
               </li>
               <li>
                 <a class="text-decoration-none d-block" href="#"
-                  ><span> － </span> Durant</a
+                  ><span class="aside_span"> － </span> Durant</a
                 >
               </li>
               <li>
                 <a class="text-decoration-none d-block" href="#"
-                  ><span> － </span> James</a
+                  ><span class="aside_span"> － </span> James</a
                 >
               </li>
             </ul>
@@ -197,7 +194,7 @@
       </div>
 
       <!-- 徵才 -->
-      <div class="container-lg border-nbaRed border-top border-3">
+      <div class="container-lg border-nbaBlue border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
@@ -257,7 +254,7 @@
         </a>
       </div>
 
-      <div class="footer bg-nbaRed text-center text-white py-2 pt-4">
+      <div class="footer bg-nbaBlue text-center text-white py-2 pt-4">
         <p>Copyright © 2022 JerseyTown.All rights reserved.</p>
       </div>
     </div>
