--- a/customzied.html
+++ b/customzied.html
@@ -40,10 +40,7 @@
             <!-- margin-start 自動推到底 好用排版方式 -->
             <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
-                <a
-                  class="nav-link p-3 active"
-                  aria-current="page"
-                  href="index.html"
+                <a class="nav-link p-3" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
