完成：三和四張卡片的hover

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           </div>
         </div>
         <div class="col mb-5 mb-lg-0">
-          <div class="card position-relative shadow" style="height: 424px">
+          <div class="card position-relative" style="height: 424px">
             <img
               data-num="002"
               src="nbaWeb/PNG-images-NBA-Players-28png.png"
@@ -343,7 +343,7 @@
           </div>
         </div>
         <div class="col mb-3 mb-lg-0">
-          <div class="card position-relative shadow" style="height: 424px">
+          <div class="card position-relative" style="height: 424px">
             <img
               data-num="003"
               src="nbaWeb/PNG-images-NBA-Players-1png.png"
