嘗試：stretched-link

--- a/index.html
+++ b/index.html
@@ -282,12 +282,12 @@
       </p>
       <div class="row row-cols-1 row-cols-lg-3 g-4 rank_card mx-2 mt-5">
         <div class="col mb-5 mb-lg-0">
-          <div class="card position-relative" style="height: 424px">
+          <div class="card" style="height: 424px">
             <img
               data-num="001"
               src="nbaWeb/PNG-images-NBA-Players-41png.png"
               height="300"
-              class="card-img-top of-none op-top position-absolute mt-n5"
+              class="card-img-top of-none op-top position-absolute mt-n5 position-relative"
               alt="..."
             />
             <div data-num="001" class="img_back img_back001"></div>
@@ -304,13 +304,11 @@
                 75th Anniversary Team in 2021.
               </p>
             </div>
-            <div class="sell_more">
-              <a
-                href="allstarListItem.html"
-                class="d-block text-center text-decoration-none link-pick_black pb-2 stretched-link"
-                >MORE</a
-              >
-            </div>
+            <a
+              href="allstarListItem.html"
+              class="text-center text-decoration-none pb-2 stretched-link"
+              >MORE</a
+            >
           </div>
         </div>
         <div class="col mb-5 mb-lg-0">
