完成：輪播、首頁顏色、按鈕調整

--- a/allstarList.html
+++ b/allstarList.html
@@ -73,7 +73,7 @@
       <!-- 銷售排行 -->
       <div
         id="Ranking"
-        class="d-flex justify-content-center align-items-center text-nbaRed mt-5"
+        class="d-flex justify-content-center align-items-center text-black mt-5"
       >
         <h2>PLAYER</h2>
         <img
