--- a/customzied.html
+++ b/customzied.html
@@ -78,8 +78,8 @@
         novalidate
       >
         <h2 class="text-center fs-4 mb-5">CUSTOMZIED ORDER LIST</h2>
-        <div class="row g-2">
-          <div class="col-md-6">
+        <div class="row g-5">
+          <div class="col-md-6 me-0">
             <label for="validationServer01" class="form-label">Last name</label>
             <input
               type="text"
@@ -216,8 +216,8 @@
               name="Remark"
             ></textarea>
           </div>
-          <p class="text-center fs-4 my-3">Total USD$6666</p>
-          <div class="col-12 text-center">
+          <p class="text-center fs-4 mt-5">Total USD$6666</p>
+          <div class="col-12 text-center mt-0">
             <button
               type="submit"
               class="btn btn-nbaBlue rounded-pill fs-4 px-5"
